glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/place-types.glx
place_types:
  city:
    label: "City"


